--- a/Probes/eks.yaml
+++ b/Probes/eks.yaml
@@ -5,7 +5,7 @@ metadata:
   region: us-east-1
 managedNodeGroups:
   - name: nodegroup-1
-    instanceType: ["m5.large", "c3.large","c4.large","c5.large"]
+    instanceTypes: ["m5.large", "c3.large","c4.large","c5.large"]
     desiredCapacity: 2 # Desired number of nodes
     minSize: 1
     maxSize: 3
