--- a/Probes/deployment.yaml
+++ b/Probes/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     environment: dev
     type: app
 spec:
-  replicas: 1
+  replicas: 3
   selector: # These are the labels replica set use to create pod replicas, this should match pod labels
     matchLabels:
       name: probestest
@@ -25,7 +25,17 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
-        
+        livenessProbe:
+          tcpSocket:
+            port: 80
+          initialDelaySeconds: 3
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 3
 ---
 apiVersion: v1
 kind: Service
