--- a/Probes/deployment.yaml
+++ b/Probes/deployment.yaml
@@ -25,14 +25,14 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 3
-          periodSeconds: 10
+        # livenessProbe:
+        #   tcpSocket:
+        #     port: 80
+        #   initialDelaySeconds: 3
+        #   periodSeconds: 10
         readinessProbe:
           httpGet:
-            path: /
+            path: //
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 3
