--- a/Probes/deployment.yaml
+++ b/Probes/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         #   periodSeconds: 10
         readinessProbe:
           httpGet:
-            path: //
+            path: //xxx
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 3
