--- a/Probes/deployment.yaml
+++ b/Probes/deployment.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: nginxx:1.14.2
         livenessProbe:
           tcpSocket:
             port: 80
