--- a/Autoscaling/hpa.yaml
+++ b/Autoscaling/hpa.yaml
@@ -29,6 +29,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: hpa-demo
+  namespace: scaling
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
