--- a/Autoscaling/vpa.yaml
+++ b/Autoscaling/vpa.yaml
@@ -26,10 +26,9 @@ apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: vpa-demo
-  namespace: scaling
 spec:
   targetRef:
-    apiVersion: apps/v1
+    apiVersion: "apps/v1"
     kind: Deployment
     name: vpa-demo
   updatePolicy:
