--- a/Autoscaling/vpa.yaml
+++ b/Autoscaling/vpa.yaml
@@ -26,6 +26,7 @@ apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: vpa-demo
+  namespace: scaling
 spec:
   targetRef:
     apiVersion: "apps/v1"
