--- a/Ingress/app2/app2.yaml
+++ b/Ingress/app2/app2.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: app2
-        image: app2:v1
+        image: app2:latest
 ---
 apiVersion: v1
 kind: Service
