--- a/Ingress/app1/app1.yaml
+++ b/Ingress/app1/app1.yaml
@@ -22,7 +22,7 @@ spec:
       type: app
   template: # This is pod definition
     metadata:
-      name: app1_ingress
+      name: app1-ingress
       labels: 
         name: app1
         environment: dev
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1_ingress
+  name: app1-ingress
   namespace: ingress
   labels: 
     name: ingress
