--- a/Ingress/app2/app2.yaml
+++ b/Ingress/app2/app2.yaml
@@ -22,7 +22,7 @@ spec:
       type: app
   template: # This is pod definition
     metadata:
-      name: app2_ingress
+      name: app2-ingress
       labels: 
         name: app2
         environment: dev
@@ -35,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app2_ingress
+  name: app2-ingress
   namespace: ingress
   labels: 
     name: ingress
