--- a/Ingress/app2/app2.yaml
+++ b/Ingress/app2/app2.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: app2
-        image: app2:latest
+        image: 811221506261.dkr.ecr.us-east-1.amazonaws.com/ingress/app:v2
 ---
 apiVersion: v1
 kind: Service
