--- a/Ingress/ingress.yaml
+++ b/Ingress/ingress.yaml
@@ -1,7 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
+
 metadata:
   name: app
+  namespace: ingress
   annotations:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/scheme: internet-facing
